<resources>
    <string name="app_name">Plan your Exchange</string>
    <string name="action_settings">Settings</string>
    <string name="choose_country">Where would you like to study English ?</string>
    <string name="choose_course">Pick desired course</string>
    <string name="choose_school">Pick desired school</string>
    <string name="choose_city">Which city attracts you the most ?</string>
    <string name="choose_between">Choose between</string>
    <string name="course">By Course</string>
    <string name="school">By School</string>
    <string name="school_course_value">Course Value per week by School</string>
    <string name="app_init_error">Closing App, can\'t continue without proper initialization!!!</string>
    <string name="loading_title">Loading</string>
    <string name="loading_dialog">Please, wait a moment</string>
    <string name="countries_title">Countries</string>
    <string name="cities_title">Cities</string>
    <string name="courses_title">Courses</string>
    <string name="schools_title">Schools</string>
    <string name="course_or_school_title">Course or School</string>
    <string name="school_course_value_title">Course Value by School</string>
    <string name="no_data_server">No data was found on server</string>
    <string name="error">Error</string>
    <string name="no_internet">No network connection</string>
    <string name="cost_of_living_fragment">Please choose a city first</string>
    <string name="cost_of_living_title">Cost of Living</string>
    <string name="health_insurances_title">Health Insurances</string>
    <string name="health_insurances_header">Pick desired health Insurance</string>
    <string name="cost" >Cost:</string>
    <string name="course_duration" >Course duration:</string>
    <string name="family_price" >Family price per month:</string>
    <string name="couple_price" >Couple price per month:</string>
    <string name="single_price" >Single price per month:</string>
    <string name="airfare_title">Airfare</string>
    <string name="airfare_header">Most common air trips</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="stops">Stops:</string>
    <string name="operated_by">Operated by</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="flight_duration">Flight duration</string>
    <string name="airport_layover">Layover</string>
    <string name="visa_fee">Visa Fee:</string>
    <string name="cost_of_living">Cost of Living:</string>
    <string name="result_title">Result</string>
    <string name="details">details</string>
    <string name="cost_of_living_details">Cost of Living details</string>
    <string name="school_details">School details</string>
</resources>
