<!--
  ~ Copyright (C) 2015, Thiago Pagonha,
  ~ Plan Your Exchange, easy exchange to fit your budget
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/airtrip_operated_by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/operated_by" />

    <TextView
        android:id="@+id/airtrip_operated_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/wallet_holo_blue_light"
        android:layout_toRightOf="@+id/airtrip_operated_by_text"/>
    <TextView
        android:id="@+id/airtrip_origin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/from"
        android:layout_below="@+id/airtrip_operated_by_text"/>

    <TextView
        android:id="@+id/airtrip_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/airtrip_origin_text"
        android:layout_below="@+id/airtrip_operated_by_text"/>
    <TextView
        android:id="@+id/airtrip_destination_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/to"
        android:layout_toRightOf="@+id/airtrip_origin"
        android:layout_below="@+id/airtrip_operated_by_text"/>

    <TextView
        android:id="@+id/airtrip_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/airtrip_destination_text"
        android:layout_below="@+id/airtrip_operated_by_text"/>

    <TextView
        android:id="@+id/airtrip_flight_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/flight_duration"
        android:layout_below="@+id/airtrip_origin_text"/>

    <TextView
        android:id="@+id/airtrip_flight_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/airtrip_flight_duration_text"
        android:layout_below="@+id/airtrip_origin_text"/>

    <TextView
        android:id="@+id/airtrip_flight_layover_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/airport_layover"
        android:layout_below="@+id/airtrip_flight_duration_text"/>

    <TextView
        android:id="@+id/airtrip_flight_layover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/airtrip_flight_layover_text"
        android:layout_below="@+id/airtrip_flight_duration_text"/>
</RelativeLayout>